cluster/apps/mealie/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "mealie-policy"
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: mealie
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            "gateway.networking.k8s.io/gateway-name": "envoy-aisling-dev-internal"
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network
      ports:
      - protocol: TCP
        port: 9000
  egress:
    - to:
      - podSelector:
          matchLabels:
            "gateway.envoyproxy.io/gateway-name": "envoy-aisling-dev-internal"
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network
    - to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: vmagent
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
